# syris

./: .easignore  .gitignore  README.md  main.py  package.json  server.py  turbo.json
api/: data_router.py  db.py  router.py  (+2 more)
core/syris_core/: .claudeignore  adr-3.mdx  alembic.ini  main.py  package.json  pyproject.toml
core/syris_core/migrations/: env.py
core/syris_core/migrations/versions/: 0001_create_audit_events_and_system_heartbeats.py  0002_create_tasks_and_steps.py  0003_create_schedules_and_watchers.py  0004_add_rules_and_quiet_hours.py  031a9f693983_.py  4579e584980f_add_message_events_table.py  f39fed3a5b4c_init.py
core/syris_core/src/syris_core/: config.py  logging.py  main.py
core/syris_core/src/syris_core/api/: app.py
core/syris_core/src/syris_core/events/: bus.py
core/syris_core/src/syris_core/llm/: client.py  context.py  prompts.py
core/syris_core/src/syris_core/notifications/: evaluator.py  notifier.py
core/syris_core/src/syris_core/observability/: audit.py  hearbeat.py  heartbeat.py
core/syris_core/src/syris_core/pipeline/: executor.py  handlers.py  normalizer.py  responder.py  router.py  run.py
core/syris_core/src/syris_core/routing/: __init__.py  llm_ambiguity.py  prompts.py
core/syris_core/src/syris_core/rules/: engine.py
core/syris_core/src/syris_core/runtime/: control_plane.py
core/syris_core/src/syris_core/safety/: autonomy.py  dryrun.py  gates.py  risk.py
core/syris_core/src/syris_core/scheduler/: loop.py
core/syris_core/src/syris_core/schemas/: audit.py  events.py  llm.py  notifications.py  pipeline.py  rules.py  safety.py  schedules.py  tasks.py  watchers.py
core/syris_core/src/syris_core/storage/: db.py  models.py
core/syris_core/src/syris_core/tasks/: engine.py  llm_step.py  recovery.py  state.py  step_runner.py
core/syris_core/src/syris_core/tools/: __init__.py  base.py  executor.py  registry.py
core/syris_core/src/syris_core/watchers/: base.py  heartbeat.py
(+702 files in other folders)
